[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/boss_horse.gd" type="Script" id=1]
[ext_resource path="res://data/images/horses/bosshorse/bosshorse1.png" type="Texture" id=2]
[ext_resource path="res://data/images/horses/bosshorse/bosshorse2.png" type="Texture" id=3]
[ext_resource path="res://data/images/horses/bosshorse/bosshorse3.png" type="Texture" id=4]
[ext_resource path="res://data/images/horses/bosshorse/bosshorse4.png" type="Texture" id=5]
[ext_resource path="res://data/images/horses/bosshorse/bosshorse5.png" type="Texture" id=6]
[ext_resource path="res://data/images/horses/bosshorse/bosshorse6.png" type="Texture" id=7]
[ext_resource path="res://scenes/boss.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.4646
height = 98.3438

[node name="boss_horse" type="KinematicBody2D" groups=["horses"]]
position = Vector2( 619.498, 378.011 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="animation" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="boss" parent="." instance=ExtResource( 8 )]
position = Vector2( -53.5842, 43.1994 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 15 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D1" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 15 )
shape = SubResource( 1 )

[node name="gallop" type="Node" parent="."]

[node name="sample_timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_enter"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exit"]
